fixing spacing

--- a/css/profile.css
+++ b/css/profile.css
@@ -7,8 +7,9 @@
   height: 50%;
 }
 
-#ui-block-b {
+#achievment {
   text-align: center;
+  
 }
 
 .container {
